syntax = "proto3";
option java_multiple_files = true;

package bsafe.src.main.proto;

service GradePredictionService {
  rpc predict(GradeRequest) returns (GradeResponse);
}

message GradeRequest {
  string model_name = 1;
  string signature_name = 2;
  bytes input_data = 3;
}

message GradeResponse {
  int32 grade_result = 1;
}